<resources>
    <string name="app_name">Floweria</string>
    <string name="name">Name</string>
    <string name="desc">Description</string>
    <string name="genus">Genus</string>
    <string name="order">Ordo</string>
    <string name="family">Famili</string>
    <string name="colon">:</string>
    <string name="profile_name">John Doe</string>
    <string name="email">john.doe@mail.com</string>
    <string name="action_profile">action_profile</string>
</resources>